--- a/index.html
+++ b/index.html
@@ -8,5 +8,39 @@
 </head>
 <body>
     <h1>welcome to namrata mehta's component library</h1>
+    <P> i am attending neog camp and i want to make a library 
+        which would make all my projects look good
+    </P>
+    <hr>
+    <h2>@typography</h2>
+    <h1>this is the biggest heading</h1>
+    <h2> this is second biggest heading</h2>
+    <p>normal text</p>
+    <small>this is relatively smaller</small>
+
+    <hr>
+    <h2>@container</h2> 
+    <h3>fluid container</h3>
+    <div> this is a fluid container no meaning just place holder
+        and goes till the end.
+    </div>
+    <h2>centered container</h2>
+    <div>this is a centered container</div>
+
+    <hr>
+    <h2>@links</h2>
+    <a href="/">primary link</a>
+    <a href="/">secondary link</a>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
