--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@
     <h2>@links</h2>
     <a href="/">primary link</a>
     <a href="/">secondary link</a>
+    <hr>
+    <h2>@list</h2>
+    <div>
+        here is my list
+        <div>item 1</div>
+        <div>item 2</div>
+        <p>this is wrong way to do</p>
+    </div>
+
+
+    <h3>ul(unordered list)</h3>
+    <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+
+    <h3>ordered list</h3>
+    <ol>
+        <li>item one</li>
+        <li>item two</li>
+    </ol>
+
+<hr>
+    <h2>@nav</h2>
 
 
 
