--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
 
 <hr>
     <h2>@nav</h2>
+    <nav>
+        <div>i am brand</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">products</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <img src="images/hero.svg"/>
+        <h1>heading inside hero</h1>
+    </header>
 
 
 
