--- a/index.html
+++ b/index.html
@@ -73,8 +73,30 @@
     </nav>
     <header>
         <img src="images/hero.svg"/>
+        
         <h1>heading inside hero</h1>
     </header>
+    <hr>
+    <h2>@sections</h2>
+    <section>
+        <h3>center section</h3>
+        <p>this will have white background</p>
+    </section>
+
+    <section>
+        <h3>off white section</h3>
+        <p>this will have grey background</p>
+    </section>
+    <h2>footer</h2>
+
+
+    <footer>
+        <div>some small heading</div>
+        <ul>
+            <li>social</li>
+            <li>social t</li>
+        </ul>
+    </footer>
 
 
 
