--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet" />
+    <!-- <style>
+        body{
+            color: red;
+        }
+    </style> -->
+
+    <!-- third way of doing css:external link -->
+    
 </head>
 <body>
+
+    <!-- <h1 style="color: red;">welcome to namrata mehta's component library</h1> -->
+
     <h1>welcome to namrata mehta's component library</h1>
-    <P> i am attending neog camp and i want to make a library 
+    <P class="para"> i am attending neog camp and i want to make a library 
         which would make all my projects look good
     </P>
     <hr>
@@ -16,6 +28,9 @@
     <h1>this is the biggest heading</h1>
     <h2> this is second biggest heading</h2>
     <p>normal text</p>
+    <p>this para will have a 
+        <strong>bold</strong>text
+    </p>
     <small>this is relatively smaller</small>
 
     <hr>
@@ -102,7 +117,7 @@
 
 
 
-
+ 
 
 
 
