--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
     <hr>
     <h2>@container</h2> 
     <h3>fluid container</h3>
-    <div> this is a fluid container no meaning just place holder
+    <div class="container-fluid"> this is a fluid container no meaning just place holder
         and goes till the end.
     </div>
-    <h2>centered container</h2>
-    <div>this is a centered container</div>
+    <h3>centered container</h3>
+    <div class="container
+    container-center">this is a centered container</div>
 
+   
     <hr>
     <h2>@links</h2>
     <a href="/">primary link</a>
     <a href="/">secondary link</a>
     <hr>
+   
+   
     <h2>@list</h2>
     <div>
         here is my list
