--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
    
     <hr>
     <h2>@links</h2>
-    <a href="/">primary link</a>
-    <a href="/">secondary link</a>
+    <a class="link link-primary"
+    href="/">primary link</a>
+
+
+    <a class="link link-secondary"
+    href="/">secondary link</a>
     <hr>
    
    
