--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
     <h3>ul(unordered list)</h3>
-    <ul>
+    <ul class="non-bullet">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
