--- a/index.html
+++ b/index.html
@@ -129,11 +129,15 @@
     <h2>footer</h2>
 
 
-    <footer>
+    <footer class="footer-header">
         <div>some small heading</div>
-        <ul>
-            <li>social</li>
-            <li>social t</li>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a  class="link" href="/">social one</a></li>
+            <li class="list-item-inline">
+                <a class="link" href="/">social two</a></li>
+            <li class="list-item-inline">
+                <a class="link" href="/">social three</a></li>
         </ul>
     </footer>
 
